diviosne macro aree header

--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+
     <!-- struttura header -->
     <header>
+        <section class="header-nav">
+
+        </section>
+
+        <section class="header-description">
+            
+        </section>
 
     </header>
 
