creazione fila dispari

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- struttura header -->
     <header>
-        <section class="header-nav container-flex">
+        <section class="header-nav container-flex"> <!--DEBUG header-nav-->
             <div class="container-flex nav-disposition container-dimension">
                 <div class="position">
                     <a href="#">logo</a>
@@ -43,7 +43,7 @@
             
         </section>
 
-        <section class="container-flex header-description">
+        <section class="container-flex header-description"> <!--DEBUG header-description-->
             <div>
 
             </div> 
@@ -54,7 +54,7 @@
     <!-- struttura corpo -->
     <main>
         <section class="container-flex odd">
-            <div class="container-flex container-dimension">
+            <div class="container-flex container-dimension container-height"> <!--DEBUG container-height-->
                 <div class="imagine">
 
                 </div>
