--- a/index.html
+++ b/index.html
@@ -53,7 +53,23 @@
 
     <!-- struttura corpo -->
     <main>
+
+        <!-- file dispari -->
         <section class="container-flex odd">
+            <div class="container-flex container-dimension container-height"> <!--DEBUG container-height-->
+                <div class="imagine">
+
+                </div>
+
+                <div class="text">
+
+                </div>
+
+            </div> 
+        </section>
+
+        <!-- file pari -->
+        <section class="container-flex even">
             <div class="container-flex container-dimension container-height"> <!--DEBUG container-height-->
                 <div class="imagine">
 
