ristruttura delle parti centrali con dei margini fissi

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- struttura header -->
     <header>
-        <section class="header-nav container-flex"> <!--DEBUG header-nav-->
+        <section class="header-nav container-flex"> 
             <div class="container-flex nav-disposition container-dimension">
                 <div class="position">
                     <a href="#">logo</a>
@@ -43,7 +43,7 @@
             
         </section>
 
-        <section class="container-flex header-description"> <!--DEBUG header-description-->
+        <section class="container-flex header-description">
             <div>
 
             </div> 
@@ -53,6 +53,34 @@
 
     <!-- struttura corpo -->
     <main>
+
+        <!-- file dispari -->
+        <section class="container-flex odd">
+            <div class="container-flex container-dimension"> <!--DEBUG container-height-->
+                <div class="imagine">
+
+                </div>
+
+                <div class="text">
+
+                </div>
+
+            </div> 
+        </section>
+
+        <!-- file pari -->
+        <section class="container-flex even">
+            <div class="container-flex container-dimension"> <!--DEBUG container-height-->
+                <div class="imagine">
+
+                </div>
+
+                <div class="text">
+
+                </div>
+
+            </div> 
+        </section>
 
         <!-- file dispari -->
         <section class="container-flex odd">
@@ -68,18 +96,12 @@
             </div> 
         </section>
 
-        <!-- file pari -->
-        <section class="container-flex even">
-            <div class="container-flex container-dimension container-height"> <!--DEBUG container-height-->
-                <div class="imagine">
+        <!-- informazioni finali -->
+        <section class="container-flex final-info">
+            <div class="container-dimension">
 
-                </div>
+            </div>
 
-                <div class="text">
-
-                </div>
-
-            </div> 
         </section>
 
     </main>
