inserimento parte delle informazioni finali

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <!-- file dispari -->
         <section class="container-flex odd">
-            <div class="container-flex container-dimension container-height"> <!--DEBUG container-height-->
+            <div class="container-flex container-dimension"> <!--DEBUG container-height-->
                 <div class="imagine">
 
                 </div>
