creazione parte finale del footer

--- a/index.html
+++ b/index.html
@@ -108,6 +108,25 @@
 
     <!-- struttura footer -->
     <footer>
+        <div class="container-flex container-dimension">
+            <div class="social"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <div class="container-flex ">
+            <div class="end-footer">
+                <a href="#">logo</a>
+            </div>
+
+            <div class="registration end-footer">
+                <button>Bottone</button>
+            </div>
+
+        </div>
+
 
     </footer>
 
