impostazione gruppo footer

--- a/index.html
+++ b/index.html
@@ -107,13 +107,20 @@
     </main>
 
     <!-- struttura footer -->
-    <footer>
-        <div class="container-flex container-dimension">
-            <div class="social"></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+    <footer class="container-flex">
+
+        <div class="container-dimension">
+
+        </div>
+
+        <!-- <div class="container-flex container-dimension ">
+            <div class="link-utili">
+                <div class="social"></div>
+                <div class="info-generali"></div>
+                <div class="info-generali"></div>
+                <div class="info-generali"></div>
+                <div class="info-generali"></div>
+            </div>
         </div>
 
         <div class="container-flex ">
@@ -125,7 +132,7 @@
                 <button>Bottone</button>
             </div>
 
-        </div>
+        </div> -->
 
 
     </footer>
