--- a/index.html
+++ b/index.html
@@ -127,9 +127,14 @@
 
         </section>
 
-        <section>
-            
+        <section class="link-finali container-flex-footer">
+            <div>
+                <a href="#">Logo</a>
+            </div>
 
+            <div class="registrati">
+                <button>Registrati</button>
+            </div>
         </section>
 
     </footer>
